静的解析の結果を元に修正。